# gentooessentials

./: CMakeLists.txt  Main.c  Main.h  Makefile  README.md
pkgs/: dwm.c  dwm.h  st.c  st.h
st/: CMakeLists.txt  Makefile  cmake_install.cmake  st.c  st.h
